deployment-back.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ms-dal-users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-dal-users
  template:
    metadata:
      labels:
        app: ms-dal-users
    spec:
      containers:
      - name: ms-dal-users
        image: gcr.io/ambient-scope-211818/ms-dal-users:1.0.0
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 60
---
## EXPOSE 
kind: Service
apiVersion: v1
metadata:
  name: ms-dal-users-svc
spec:
  selector:
    app: ms-dal-users
  type: NodePort
  ports:
  - name: ms-dal-users
    protocol: TCP
    port: 8081
    nodePort: 30290
    targetPort: 8081
