ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /app/*
        backend:
          serviceName: frontend-angular-svc
          servicePort: 80
      - path: /*
        backend:
          serviceName: ms-dal-users-svc
          servicePort: 8081
      - path: /test/*
        backend:
          serviceName: ms-hello-app-svc
          servicePort: 8080
      - path: /test/v1/*
        backend:
          serviceName: ms-hello-app-svc
          servicePort: 8080
